--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -305,70 +305,114 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_97daa5ea8d9fa9d44b198f71ae0d3b551f12655f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mfrac linethickness='0'><mrow><mtext></mtext></mrow><mrow><mfrac linethickness='0'><mrow><mtext>discrete</mtext></mrow><mrow><mtext>geometry</mtext></mrow></mfrac></mrow></mfrac></mtd> <mtd></mtd> <mtd><mfrac linethickness='0'><mrow><mtext></mtext></mrow><mrow><mfrac linethickness='0'><mrow><mtext>differential</mtext></mrow><mrow><mtext>geometry</mtext></mrow></mfrac></mrow></mfrac></mtd> <mtd></mtd> <mtd><mfrac linethickness='0'><mrow><mtext>formal</mtext></mrow><mrow><mfrac linethickness='0'><mrow><mtext>differential</mtext></mrow><mrow><mi>geometry</mi></mrow></mfrac></mrow></mfrac></mtd> <mtd></mtd> <mtd><mfrac linethickness='0'><mrow><mtext>super</mtext></mrow><mrow><mfrac linethickness='0'><mrow><mtext>differential</mtext></mrow><mrow><mtext>geometry</mtext></mrow></mfrac></mrow></mfrac></mtd></mtr> <mtr><mtd></mtd></mtr> <mtr><mtd><mo>*</mo></mtd> <mtd><mrow><mtable><mtr><mtd><mover><mo>⟵</mo><mrow><mphantom><mi>AA</mi></mphantom><mi>Π</mi><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd></mtr> <mtr><mtd><mover><mo>↪</mo><mrow><mphantom><mi>AA</mi></mphantom><mi>Disc</mi><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd></mtr></mtable></mrow></mtd> <mtd><mi>CartSp</mi></mtd> <mtd><mrow><mtable><mtr><mtd><mover><mo>↪</mo><mrow><mphantom><mi>AA</mi></mphantom><msub><mi>ι</mi> <mi>inf</mi></msub><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd></mtr> <mtr><mtd><mover><mo>⟵</mo><mrow><mphantom><mi>AA</mi></mphantom><msub><mi>Π</mi> <mi>inf</mi></msub><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd></mtr> <mtr><mtd><mphantom><mi>A</mi></mphantom></mtd></mtr> <mtr><mtd><mphantom><mfrac linethickness='0'><mrow><mi>A</mi></mrow><mrow><mi>A</mi></mrow></mfrac></mphantom></mtd></mtr></mtable></mrow></mtd> <mtd><mi>FormalCartSp</mi></mtd> <mtd><mrow><mtable><mtr><mtd><mover><mo>⟵</mo><mrow><mphantom><mi>AA</mi></mphantom><mi>even</mi><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd></mtr> <mtr><mtd><mover><mo>↪</mo><mrow><mphantom><mi>AA</mi></mphantom><msub><mi>ι</mi> <mi>sup</mi></msub><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd></mtr> <mtr><mtd><mover><mo>⟵</mo><mrow><mphantom><mi>AA</mi></mphantom><msub><mi>Π</mi> <mi>sup</mi></msub><mphantom><mi>AA</mi></mphantom></mrow></mover></mtd></mtr> <mtr><mtd><mphantom><mi>A</mi></mphantom></mtd></mtr> <mtr><mtd><mphantom><mfrac linethickness='0'><mrow><mi>A</mi></mrow><mrow><mi>A</mi></mrow></mfrac></mphantom></mtd></mtr> <mtr><mtd><mphantom><mfrac linethickness='0'><mrow><mi>A</mi></mrow><mrow><mi>A</mi></mrow></mfrac></mphantom></mtd></mtr></mtable></mrow></mtd> <mtd><mi>SuperFormalCartSp</mi></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+    <div class='num_defn' id='CategoryWithWeakEquivalences'>
+<h6 id='definition'>Definition</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/category+with+weak+equivalences'>category with weak equivalences</a>)</strong></p>
+
+<p>A <em><a class='existingWikiWord' href='/nlab/show/category+with+weak+equivalences'>category with weak equivalences</a></em> is</p>
+
+<ol>
+<li>
+<p>a <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math></p>
+</li>
+
+<li>
+<p>a <a class='existingWikiWord' href='/nlab/show/subcategory'>subcategory</a> <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi><mo>⊂</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>W \subset \mathcal{C}</annotation></semantics></math></p>
+</li>
+</ol>
+
+<p>such that the <a class='existingWikiWord' href='/nlab/show/morphism'>morphisms</a> in <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math></p>
+
+<ol>
+<li>
+<p>include all the <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphisms</a> of <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>,</p>
+</li>
+
+<li>
+<p>satisfy <a class='existingWikiWord' href='/nlab/show/two-out-of-three'>two-out-of-three</a>:</p>
+
+<p>If for <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> any two <a class='existingWikiWord' href='/nlab/show/composition'>composable</a> <a class='existingWikiWord' href='/nlab/show/morphism'>morphisms</a> in <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, two out of the set <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><mi>g</mi><mo>,</mo><mspace width='thinmathspace'></mspace><mi>f</mi><mo>,</mo><mspace width='thinmathspace'></mspace><mi>g</mi><mo>∘</mo><mi>f</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{g,\, f,\, g \circ f \}</annotation></semantics></math> are in <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math>, then so is the third.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>f</mi></mpadded></msup><mo>↗</mo></mtd> <mtd></mtd> <mtd><msup><mo>↘</mo> <mpadded width='0'><mi>g</mi></mpadded></msup></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><munder><mo>⟶</mo><mrow><mi>g</mi><mo>∘</mo><mi>f</mi></mrow></munder></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
-   { \text{}  \atop { \text{discrete} \atop {\text{geometry}} } }
-   &amp;&amp;
-   {\text{} \atop {\text{differential} \atop \text{geometry}}}
-   &amp;&amp;
-   {\text{formal} \atop {\text{differential} \atop {geometry}}}
-   &amp;&amp;
-   {\text{super} \atop {\text{differential} \atop \text{geometry}}}
-   \\
-   \\
-   \ast
-   &amp;
-   \array{
-     \overset{\phantom{AA}\Pi\phantom{AA}}{\longleftarrow}
-     \\
-     \overset{\phantom{AA}Disc\phantom{AA}}{\hookrightarrow}
-   }
-   &amp;
-  CartSp
-   &amp;
-   \array{
-     \overset{\phantom{AA}\iota_{inf}\phantom{AA}}{\hookrightarrow}
-     \\
-     \overset{\phantom{AA}\Pi_{inf}\phantom{AA}}{\longleftarrow}
-     \\
-     \phantom{A}
-     \\
-     \phantom{A \atop A}
-   }
-   &amp;
-  FormalCartSp
-  &amp;
-   \array{
-     \overset{\phantom{AA}even\phantom{AA}}{\longleftarrow}
-     \\
-     \overset{\phantom{AA}\iota_{sup}\phantom{AA}}{\hookrightarrow}
-     \\
-     \overset{\phantom{AA}\Pi_{sup}\phantom{AA}}{\longleftarrow}
-     \\
-     \phantom{A}
-     \\
-     \phantom{A \atop A}
-     \\
-     \phantom{A \atop A}
-   }
-  &amp;
-  SuperFormalCartSp
+    &amp; {}^{\mathllap{f}}\nearrow &amp;&amp; \searrow^{\mathrlap{g}}
+    \\
+    &amp;&amp; \underset{ g \circ f }{\longrightarrow}
   }
-  \,.
+
+</annotation></semantics></math></div></li>
+</ol>
+</div>
+
+<div class='num_defn' id='LocalizationOfACategory'>
+<h6 id='definition_2'>Definition</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/localization'>localization of a category</a>)</strong></p>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi><mo>⊂</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>W \subset \mathcal{C}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/category+with+weak+equivalences'>category with weak equivalences</a>. Then the <em><a class='existingWikiWord' href='/nlab/show/localization'>localization</a></em> of <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> at <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> is, if it exsists</p>
+
+<ol>
+<li>
+<p>a <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>[</mo><msup><mi>W</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\mathcal{C}[W^{-1}]</annotation></semantics></math></p>
+</li>
+
+<li>
+<p>a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>γ</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒞</mi><mo>⟶</mo><mi>𝒞</mi><mo stretchy='false'>[</mo><msup><mi>W</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\gamma \;\colon\; \mathcal{C} \longrightarrow \mathcal{C}[W^{-1}]</annotation></semantics></math></p>
+</li>
+</ol>
+
+<p>such that</p>
+
+<ol>
+<li>
+<p><math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>γ</mi></mrow><annotation encoding='application/x-tex'>\gamma</annotation></semantics></math> sends all morphisms in <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi><mo>⊂</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>W \subset \mathcal{C}</annotation></semantics></math> to <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphisms</a>,</p>
+</li>
+
+<li>
+<p><math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>γ</mi></mrow><annotation encoding='application/x-tex'>\gamma</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/universal+construction'>universal with this property</a>: If <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒞</mi><mo>⟶</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>F \;\colon\; \mathcal{C} \longrightarrow \mathcal{D}</annotation></semantics></math> is any functor with this property, then it factors through <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>γ</mi></mrow><annotation encoding='application/x-tex'>\gamma</annotation></semantics></math>, up to <a class='existingWikiWord' href='/nlab/show/natural+isomorphism'>natural isomorphism</a>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mspace width='thickmathspace'></mspace><mo>≃</mo><mspace width='thickmathspace'></mspace><mi>D</mi><mi>F</mi><mo>∘</mo><mi>γ</mi><mphantom><mi>AAAAAAA</mi></mphantom><mrow><mtable><mtr><mtd><mi>𝒞</mi></mtd> <mtd><mover><mo>⟶</mo><mi>F</mi></mover></mtd> <mtd><mi>𝒟</mi></mtd></mtr> <mtr><mtd><msub><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>γ</mi></mpadded></msub><mo>↘</mo></mtd> <mtd><msub><mo>⇙</mo> <mo>≃</mo></msub></mtd> <mtd><msub><mo>↗</mo> <mpadded width='0'><mrow><mi>D</mi><mi>F</mi></mrow></mpadded></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mi>𝒞</mi><mo stretchy='false'>[</mo><msup><mi>W</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>]</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  F \;\simeq\;
+  D F \circ \gamma
+  \phantom{AAAAAAA}
+  \array{
+    \mathcal{C} 
+      &amp;\overset{F}{\longrightarrow}&amp;
+    \mathcal{D}
+    \\
+    {}_{\mathllap{\gamma}}\searrow 
+      &amp;\swArrow_{\simeq}&amp; 
+    \nearrow_{\mathrlap{D F}}
+    \\
+    &amp; \mathcal{C}[W^{-1}]
+  }
 
 </annotation></semantics></math></div>
+<p>and any two such factorizations <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_22' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mi>F</mi></mrow><annotation encoding='application/x-tex'>D F</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_23' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>′</mo><mi>F</mi></mrow><annotation encoding='application/x-tex'>D&#39; F</annotation></semantics></math> are related by a unique <a class='existingWikiWord' href='/nlab/show/natural+isomorphism'>natural isomorphism</a>.</p>
+</li>
+</ol>
+
+<p>This is called a <em><a class='existingWikiWord' href='/nlab/show/reflective+localization'>reflective localization</a></em> if the localization functor has a <a class='existingWikiWord' href='/nlab/show/full+and+faithful+functor'>fully faithful</a> <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right adjoint</a>, exhibiting it as the reflection functor of a <a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a>-inclusion</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_23a1c7b1453522c39a1430391c19e15064258edb_24' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>[</mo><msup><mi>W</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>]</mo><munderover><mo>⊥</mo><munder><mo>↪</mo><mphantom><mi>AAAA</mi></mphantom></munder><mover><mo>⟵</mo><mrow><mphantom><mi>AA</mi></mphantom><mi>γ</mi><mphantom><mi>AA</mi></mphantom></mrow></mover></munderover><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>
+  \mathcal{C}[W^{-1}]
+  \underoverset
+    {\underset{\phantom{AAAA}}{\hookrightarrow}}  
+    {\overset{ \phantom{AA} \gamma \phantom{AA} }{\longleftarrow}} 
+    {\bot}
+  \mathcal{C}
+
+</annotation></semantics></math></div></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 27, 2018 at 04:59:40.
+  Last revised on June 28, 2018 at 04:56:39.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1539" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1539 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1540" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1540 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
