--- a/pages/7087.html
+++ b/pages/7087.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5824/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -374,6 +373,8 @@ margin-left: 0em;
 </div>
 </div>
 
+<h2 id='idea'>Idea</h2>
+
 <p>A <a class='existingWikiWord' href='/nlab/show/localization'>localization</a> is called <strong>reflective</strong> if the <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategory</a> of <a class='existingWikiWord' href='/nlab/show/local+object'>local objects</a> is a <a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a>/<a class='existingWikiWord' href='/nlab/show/reflective+sub-%28infinity%2C1%29-category'>reflective sub-(∞,1)-category</a>.</p>
 
 <p>
@@ -381,19 +382,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December 17, 2011 14:17:16 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.170)
+  <p>
+  Last revised on June 28, 2018 at 06:55:02.
+  See the <a href="https://ncatlab.org/nlab/history/reflective localization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/reflective+localization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/reflective+localization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflective+localization/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/reflective+localization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflective+localization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/reflective localization/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/reflective+localization" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/reflective+localization" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/reflective+localization" id="view_source" rel="nofollow">Source</a>
