--- a/pages/16505.html
+++ b/pages/16505.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6553/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -378,7 +377,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>on <a class='existingWikiWord' href='/nlab/show/formal+logic'>formal logic</a> as a tool in <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a>, criticizing the “old old logic”, <a class='existingWikiWord' href='/nlab/show/syllogism'>Aristotle&#39;s logic</a> of <a class='existingWikiWord' href='/nlab/show/syllogism'>syllogism</a>, <a class='existingWikiWord' href='/nlab/show/Georg+Hegel'>Hegel</a>’s <a class='existingWikiWord' href='/nlab/show/metaphysics'>metaphysical</a> “<a class='existingWikiWord' href='/nlab/show/objective+and+subjective+logic'>objective logic</a>” (<a href='{#OnHegelsLogicI}'>I</a>, <a href='{#OnHegelsLogicII}'>II</a>, <a href='{#OnHegelsLogicIII}'>III</a>), and championing (<a href='#ConclusionAndOutlook'>I</a>) the “new logic” (modern <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a>) initiated by <a class='existingWikiWord' href='/nlab/show/Guiseppe+Peano'>Peano</a> and <a class='existingWikiWord' href='/nlab/show/Gottlob+Frege'>Frege</a> (<a href='#EnterPeanoFrege'>I</a>).</p>
+<p>on <a class='existingWikiWord' href='/nlab/show/formal+logic'>formal logic</a> as a tool in <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a>, criticizing the “old old logic”, <a class='existingWikiWord' href='/nlab/show/syllogism'>Aristotle&#39;s logic</a> of <a class='existingWikiWord' href='/nlab/show/syllogism'>syllogism</a>, <a class='existingWikiWord' href='/nlab/show/Georg+Hegel'>Hegel</a>’s <a class='existingWikiWord' href='/nlab/show/metaphysics'>metaphysical</a> “<a class='existingWikiWord' href='/nlab/show/objective+and+subjective+logic'>objective logic</a>” (<a href='#OnHegelsLogicI'>I</a>, <a href='#OnHegelsLogicII'>II</a>, <a href='#OnHegelsLogicIII'>III</a>), and championing (<a href='#ConclusionAndOutlook'>I</a>) the “new logic” (modern <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a>) initiated by <a class='existingWikiWord' href='/nlab/show/Guiseppe+Peano'>Peano</a> and <a class='existingWikiWord' href='/nlab/show/Gottlob+Frege'>Frege</a> (<a href='#EnterPeanoFrege'>I</a>).</p>
 <hr/>
 <blockquote>
 <p>The topics we discussed in our first lecture, and the topics we shall discuss later, all reduce themselves, in so far as they are genuinely philosophical, to problems of logic. This is not due to any accident, but to the fact that every philosophical problem, when it is subjected to the necessary analysis and purification, is found either to be not really philosophical at all, or else to be, in the sense in which we are using the word, logical. But as the word “logic” is never used in the same sense by two different philosophers, some explanation of what I mean by the word is indispensable at the outset.</p>
@@ -492,19 +491,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on April 17, 2015 13:30:29 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  <p>
+  Last revised on June 28, 2018 at 09:24:05.
+  See the <a href="https://ncatlab.org/nlab/history/Logic as the Essence of Philosophy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Logic+as+the+Essence+of+Philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Logic+as+the+Essence+of+Philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Logic+as+the+Essence+of+Philosophy/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Logic+as+the+Essence+of+Philosophy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Logic+as+the+Essence+of+Philosophy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Logic as the Essence of Philosophy/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Logic+as+the+Essence+of+Philosophy" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Logic+as+the+Essence+of+Philosophy" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Logic+as+the+Essence+of+Philosophy" id="view_source" rel="nofollow">Source</a>
