--- a/pages/10834.html
+++ b/pages/10834.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -503,9 +502,9 @@ margin-left: 0em;
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>Given a <a class='existingWikiWord' href='/nlab/show/ring'>commutative ring</a> <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> and an <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>algebra</a> <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>, this algebra is <em>finitely generated over <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math></em> if it is a <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> of a <a class='existingWikiWord' href='/nlab/show/polynomial'>polynomial ring</a> <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>[</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>R[x_1, \cdots, x_n]</annotation></semantics></math> on finitely many variables.</p>
+<p>Given a <a class='existingWikiWord' href='/nlab/show/ring'>commutative ring</a> <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> and an <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>algebra</a> <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>, this algebra is <em>finitely generated over <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math></em> if it is a <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> of a <a class='existingWikiWord' href='/nlab/show/polynomial'>polynomial ring</a> <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>[</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>R[x_1, \cdots, x_n]</annotation></semantics></math> on finitely many variables.</p>
 
-<p>If moreover <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>=</mo><mi>R</mi><mo stretchy='false'>[</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo><mo stretchy='false'>/</mo><mo stretchy='false'>(</mo><msub><mi>f</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>f</mi> <mi>k</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>A = R[x_1, \cdots, x_n]/(f_1, \cdots, f_k)</annotation></semantics></math> for a finite number of <a class='existingWikiWord' href='/nlab/show/polynomial'>polynomials</a> <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>f</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>f_i</annotation></semantics></math>, then <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is called <em>finiteley presented</em>.</p>
+<p>If moreover <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>=</mo><mi>R</mi><mo stretchy='false'>[</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo><mo stretchy='false'>/</mo><mo stretchy='false'>(</mo><msub><mi>f</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>f</mi> <mi>k</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>A = R[x_1, \cdots, x_n]/(f_1, \cdots, f_k)</annotation></semantics></math> for a finite number of <a class='existingWikiWord' href='/nlab/show/polynomial'>polynomials</a> <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>f</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>f_i</annotation></semantics></math>, then <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is called <em>finitely presented</em>.</p>
 </div>
 
 <h2 id='examples'>Examples</h2>
@@ -519,7 +518,7 @@ margin-left: 0em;
 <div class='num_example'>
 <h6 id='example_2'>Example</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> is an <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a> over the <a class='existingWikiWord' href='/nlab/show/integer'>integers</a>, hence a <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math>-ring. Accordingly a <em>finitely generated ring</em> is a finitely generated <math class='maruku-mathml' display='inline' id='mathml_36c0ab0557612003a3c6994cf12a0ab527d72129_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math>-algebra, and similarly for <em>finitely presented ring</em>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> is an <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a> over the <a class='existingWikiWord' href='/nlab/show/integer'>integers</a>, hence a <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math>-ring. Accordingly a <em>finitely generated ring</em> is a finitely generated <math class='maruku-mathml' display='inline' id='mathml_c11e13e870efe43b8dc453a29c326894928ec1ef_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math>-algebra, and similarly for <em>finitely presented ring</em>.</p>
 
 <p>For rings every finitely generated ring is already also finitely presented.</p>
 </div>
@@ -569,19 +568,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 26, 2013 09:21:20 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (145.116.131.59)
+  <p>
+  Last revised on June 28, 2018 at 14:41:35.
+  See the <a href="https://ncatlab.org/nlab/history/finitely generated algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finitely+generated+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finitely+generated+algebra/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/finitely+generated+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finitely+generated+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/finitely+generated+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finitely+generated+algebra/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/finitely+generated+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finitely+generated+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/finitely generated algebra/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/finitely+generated+algebra" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/finitely+generated+algebra" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/finitely+generated+algebra" id="view_source" rel="nofollow">Source</a>
