--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,41 +305,27 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bd276ed7f0e9632a43c6abcb19bd2f2f6511fe80_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>Hom</mi> <mi>SmoothSet</mi></msub><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>X</mi><mo>×</mo><msup><mi>ℝ</mi> <mn>1</mn></msup><mover><mo>→</mo><mrow><msub><mi>p</mi> <mn>1</mn></msub></mrow></mover><mi>X</mi><mspace width='thickmathspace'></mspace><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mi>A</mi><mo maxsize='1.2em' minsize='1.2em'>)</mo></mtd> <mtd><mo>≃</mo><msub><mo>∫</mo> <mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>∈</mo><mi>CartSp</mi></mrow></msub><msub><mi>Hom</mi> <mi>Set</mi></msub><mrow><mo>(</mo><mi>X</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>,</mo><mspace width='thinmathspace'></mspace><munder><munder><mrow><msub><mi>Hom</mi> <mi>SmoothSet</mi></msub><mo maxsize='1.2em' minsize='1.2em'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msup><mi>ℝ</mi> <mn>1</mn></msup><mover><mo>→</mo><mrow><msub><mi>p</mi> <mn>1</mn></msub></mrow></mover><msup><mi>ℝ</mi> <mi>n</mi></msup><mspace width='thickmathspace'></mspace><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mi>A</mi><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow><mo>⏟</mo></munder><mtext>bijection</mtext></munder><mo>)</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-    Hom_{SmoothSet}\big(
-      X \times \mathbb{R}^1 \overset{p_1}{\to} X
-      \;\,,\;
-      A
-    \big)
-    &amp; \simeq
-    \int_{\mathbb{R}^n \in CartSp}
-    Hom_{Set}\left( X(\mathbb{R}^n),
-    \,
-    \underset{\text{bijection}}{
-    \underbrace{
-    Hom_{SmoothSet}\big(
-      \mathbb{R}^n \times \mathbb{R}^1 \overset{p_1}{\to} \mathbb{R}^n
-      \;\,,\;
-      A
-    \big)
-    }}
-    \right)
-  \end{aligned}
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e4de09ee1a8022c511eae48d05c9b5dd8706ee5c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>{</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>⟶</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi></mrow></msup><mo>}</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \left\{
+    \mathbb{R}^{n} \times \mathbb{D}_V \times \mathbb{R}^{0\vert q + 1}
+    \longrightarrow
+    \mathbb{R}^{n} \times \mathbb{D}_V \times \mathbb{R}^{0\vert q}
+  \right\}
+  \,.
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 29, 2018 at 09:23:38.
+  Last revised on June 29, 2018 at 10:12:32.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1542" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1542 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1543" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1543 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
