--- a/pages/16833.html
+++ b/pages/16833.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/Grothendieck+topology'>Grothendieck topology</a> on any category for which only the <a class='existingWikiWord' href='/nlab/show/identity'>identity</a> morphisms are <a class='existingWikiWord' href='/nlab/show/covering'>covering</a> is the <em>trivial topology</em>. It <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaves</a> are all the <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaves</a>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/Grothendieck+topology'>Grothendieck topology</a> on any category for which only the <a class='existingWikiWord' href='/nlab/show/identity'>identity</a> morphisms are <a class='existingWikiWord' href='/nlab/show/covering'>covering</a> is the <em>trivial topology</em>. Its <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaves</a> are all the <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaves</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -331,19 +330,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on September  8, 2015 18:11:55 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (147.231.89.106)
+  <p>
+  Last revised on June 29, 2018 at 16:25:48.
+  See the <a href="https://ncatlab.org/nlab/history/trivial topology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/trivial+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/trivial+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/trivial+topology/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/trivial+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/trivial+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/trivial topology/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/trivial+topology" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/trivial+topology" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/trivial+topology" id="view_source" rel="nofollow">Source</a>
