--- a/pages/19474.html
+++ b/pages/19474.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8640/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8640/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -333,19 +333,33 @@ margin-left: 0em;
 <li>
 <p>Nakano Hiroshi, 2000, <em>A Modality for Recursion</em>. In Logic in Computer Science (LICS’00). (<a href='https://pdfs.semanticscholar.org/a177/47f98e5b821f03ec8be858794f2f83a683b7.pdf'>pdf</a>)</p>
 </li>
+
+<li>
+<p>Lars Birkedal, Ales Bizjak, Ranald Clouston, Hans Bugge Grathwohl, <a class='existingWikiWord' href='/nlab/show/Bas+Spitters'>Bas Spitters</a>, Andrea Vezzosi, <em>Guarded cubical type theory</em> <a href='https://arxiv.org/abs/1611.09263'>arxiv</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Jon+Sterling'>Jon Sterling</a>, Robert Harper, <em>Guarded Computational Type Theory</em> <a href='https://arxiv.org/abs/1804.09098'>arxiv</a></p>
+</li>
+</ul>
+
+<p>A general calculus for dependent modal type theories.</p>
+
+<ul>
+<li>Ranald Clouston, Bassel Mannaa, Rasmus Ejlers Møgelberg, Andrew M. Pitts, <a class='existingWikiWord' href='/nlab/show/Bas+Spitters'>Bas Spitters</a>, <em>Modal Dependent Type Theory and Dependent Right Adjoints</em> <a href='https://arxiv.org/abs/1804.05236'>arxiv</a></li>
 </ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on June 22, 2018 at 08:37:19.
+  Last revised on June 30, 2018 at 09:53:51.
   See the <a href="https://ncatlab.org/nlab/history/guarded recursion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/guarded+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/guarded+recursion/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/guarded+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/guarded+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/guarded+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/guarded+recursion/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/guarded+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/guarded+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/guarded recursion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
