--- a/pages/18089.html
+++ b/pages/18089.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,24 +311,35 @@ margin-left: 0em;
 
 <p>An <em>EI-category</em> is a <a class='existingWikiWord' href='/nlab/show/category'>category</a> in which every <a class='existingWikiWord' href='/nlab/show/endomorphism'>endomorphism</a> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>.</p>
 
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/inverse+EI+%28%E2%88%9E%2C1%29-category'>inverse EI (∞,1)-category</a></li>
+</ul>
+
 <p>
+</p>
+
+<p>
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Created on March 30, 2017 08:31:16 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.41.134.32)
+  <p>
+  Last revised on July  1, 2018 at 05:18:29.
+  See the <a href="https://ncatlab.org/nlab/history/EI-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/EI-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/EI-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/EI-category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/EI-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/EI-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/EI-category/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/EI-category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/EI-category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/EI-category" id="view_source" rel="nofollow">Source</a>
